force-app/main/default/objects/Host_Product_Mapping__c/Host_Product_Mapping__c.object-meta.xml
<CustomObject>
    <description>Master table to map host products to SF product table</description>
    <label>Host Product Mapping</label>
    <nameField>
        <displayFormat>HP-{0000}</displayFormat>
        <label>Host Product Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Host Product Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>