force-app/main/default/objects/Host_Product_Mapping__c/fields/Credit_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Credit_Type_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Credit Type ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>