force-app/main/default/objects/Host_Product_Mapping__c/fields/Host_Name__c.field-meta.xml
<CustomField>
    <fullName>Host_Name__c</fullName>
    <inlineHelpText>ชื่อระบบขออนุมัติสินเชื่อ</inlineHelpText>
    <label>Host Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SLS</fullName>
            </value>
            <value>
                <fullName>EXCEL</fullName>
            </value>
            <value>
                <fullName>FSR</fullName>
                <isActive>false</isActive>
                <label>FSR</label>
            </value>
            <value>
                <fullName>TPT</fullName>
                <isActive>false</isActive>
                <label>TPT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>