force-app/main/default/objects/Host_Product_Mapping__c/fields/Host_Prod_Name_Credit_Facility__c.field-meta.xml
<CustomField>
    <fullName>Host_Prod_Name_Credit_Facility__c</fullName>
    <inlineHelpText>ชื่อ Credit Facility (SLS)</inlineHelpText>
    <label>Host Prod Name/Credit Facility</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Product_Program__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loan - Core WC</fullName>
            </value>
            <value>
                <fullName>Loan - Quick Loan 10%</fullName>
            </value>
            <value>
                <fullName>Loan - Quick Loan 15%</fullName>
            </value>
            <value>
                <fullName>Loan - Land</fullName>
            </value>
            <value>
                <fullName>Loan - Construction</fullName>
            </value>
            <value>
                <fullName>Loan - Machine</fullName>
            </value>
            <value>
                <fullName>OD</fullName>
            </value>
            <value>
                <fullName>L/G Utility</fullName>
            </value>
            <value>
                <fullName>L/G Lending Guarantee</fullName>
            </value>
            <value>
                <fullName>L/G Credit Purchasing Guarantee</fullName>
            </value>
            <value>
                <fullName>L/G Performance Guarantee</fullName>
            </value>
            <value>
                <fullName>L/G Advance Payment Guarantee</fullName>
            </value>
            <value>
                <fullName>L/G Retention Guarantee</fullName>
            </value>
            <value>
                <fullName>L/G Tax/Duty Guarantee</fullName>
            </value>
            <value>
                <fullName>L/G Tender Guarantee/Bid Bond</fullName>
            </value>
            <value>
                <fullName>L/G Other</fullName>
            </value>
            <value>
                <fullName>AVAL</fullName>
            </value>
            <value>
                <fullName>ACCEPTANCE</fullName>
            </value>
            <value>
                <fullName>F/X - FORWARD</fullName>
            </value>
            <value>
                <fullName>L/C Loan one time</fullName>
            </value>
            <value>
                <fullName>Fleet Card</fullName>
            </value>
            <value>
                <fullName>OBOD</fullName>
            </value>
            <value>
                <fullName>Excel Test</fullName>
            </value>
            <value>
                <fullName>COMMERCIAL LOANS</fullName>
            </value>
            <value>
                <fullName>OD for Floating Charge</fullName>
            </value>
            <value>
                <fullName>Loan - General</fullName>
            </value>
            <value>
                <fullName>Loan - Special (GSB)</fullName>
            </value>
            <value>
                <fullName>Top-up for Refinance cost</fullName>
            </value>
            <value>
                <fullName>OD for Growth</fullName>
            </value>
            <value>
                <fullName>UNSECURED LOAN</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>