force-app/main/default/objects/Host_Product_Mapping__c/fields/Host_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Host_Product_Group__c</fullName>
    <inlineHelpText>ชื่อ Product Group (SLS)</inlineHelpText>
    <label>Host Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Host_Name__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TMB SME SmartBiz</fullName>
            </value>
            <value>
                <fullName>F-Cash</fullName>
            </value>
            <value>
                <fullName>NEW IFC</fullName>
            </value>
            <value>
                <fullName>Retention</fullName>
            </value>
            <value>
                <fullName>Excel Test</fullName>
            </value>
            <value>
                <fullName>OD No Asset</fullName>
            </value>
            <value>
                <fullName>Quick Loan</fullName>
            </value>
            <value>
                <fullName>Supply Chain</fullName>
            </value>
            <value>
                <fullName>Non Product Program</fullName>
                <isActive>false</isActive>
                <label>Non Product Program</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>