force-app/main/default/objects/Host_Product_Mapping__c/fields/Product_Group_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Group ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>