force-app/main/default/objects/Host_Product_Mapping__c/fields/Product_Program__c.field-meta.xml
<CustomField>
    <fullName>Product_Program__c</fullName>
    <inlineHelpText>ชื่อ Product Program (SLS)</inlineHelpText>
    <label>Host Product Program</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Host_Product_Group__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SmartBiz for Construction</fullName>
            </value>
            <value>
                <fullName>OD No Asset</fullName>
            </value>
            <value>
                <fullName>Retention Pre Approve</fullName>
            </value>
            <value>
                <fullName>Retention Non Pre Approve</fullName>
            </value>
            <value>
                <fullName>Quick Loan</fullName>
            </value>
            <value>
                <fullName>NEW IFC</fullName>
            </value>
            <value>
                <fullName>Excel Test</fullName>
            </value>
            <value>
                <fullName>TMB SME SmartBiz</fullName>
            </value>
            <value>
                <fullName>Top Up Bancassurance</fullName>
            </value>
            <value>
                <fullName>F-Cash</fullName>
            </value>
            <value>
                <fullName>ODB</fullName>
            </value>
            <value>
                <fullName>Factoring</fullName>
            </value>
            <value>
                <fullName>SmartBiz E-Commerce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>