force-app/main/default/objects/Host_Product_Mapping__c/fields/Salesforce_Product__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>ชื่อ Product บนระบบ Salesforce</inlineHelpText>
    <label>Salesforce Product</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Product2.FLAG_RTL_Product__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Host Product Mappings</relationshipLabel>
    <relationshipName>Host_Product_Mapping</relationshipName>
    <type>Lookup</type>
</CustomField>