force-app/main/default/objects/Host_Product_Mapping__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <formula>TEXT(Host_Name__c) + &apos;|&apos; +  TEXT(Host_Product_Group__c) + &apos;|&apos; +  TEXT(Product_Program__c)  + &apos;|&apos; +  TEXT(Host_Prod_Name_Credit_Facility__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unique Key</label>
    <type>Text</type>
</CustomField>