force-app/main/default/objects/Host_Product_Mapping__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Active_Flag__c</columns>
    <columns>Host_Product_Code__c</columns>
    <columns>Host_Name__c</columns>
    <columns>Host_Product_Group__c</columns>
    <columns>Product_Group_ID__c</columns>
    <columns>Product_Program__c</columns>
    <columns>Product_Program_ID__c</columns>
    <columns>Host_Prod_Name_Credit_Facility__c</columns>
    <columns>Credit_Type_ID__c</columns>
    <columns>Salesforce_Product__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>